Optimizations with profiling (x5 speedup)