@@ -13,7 +13,7 @@ public class DefaultStepCostFunction implements StepCostFunction {
 	public Double calculateStepCost(Object fromState, Object toState,
 			String action) {
 
-		return new Double(1);
+		return Double.valueOf(1);
 	}
 
 }
